Fix alignment issue

--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -145,7 +145,7 @@
 
         button {
           display: block;
-          min-width: 7.5rem;
+          min-width: 7.7rem;
           height: 2.75rem;
           line-height: 2.75rem;
           padding: 0 1.25rem 0 (1.25rem + _font(letter-spacing));
